syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainpb";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
