syntax = "proto3";

package farewell;

option go_package = "/proto/gen/farewell;farewellpb";

service Farewell {
  rpc BidGoodbye (GoodByeRequest) returns (GoodByeResponse);
}

message GoodByeRequest {
  string name = 1;
}

message GoodByeResponse {
  string message = 1;
}
